--- a/Parcial 1/Códigos/Parcial_1_código.ipynb
+++ b/Parcial 1/Códigos/Parcial_1_código.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 170,
-   "id": "4102e682",
+   "id": "fd76554c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "942ff381",
+   "id": "8abc0b84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "916bc638",
+   "id": "57b52711",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "56e6834e",
+   "id": "f227cd41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "d6b0ca86",
+   "id": "86cfaf98",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "c18c8e7d",
+   "id": "ee6cdaa5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "9618e2c3",
+   "id": "9716b566",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,35 +119,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
-   "id": "18487fd5",
+   "execution_count": 188,
+   "id": "df6521a8",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'float' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_8896/1767660585.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1000\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0mm\u001b[0m\u001b[1;33m-=\u001b[0m\u001b[0mDerivative\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mFunction\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mm\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mm\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mDerivative_2\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mFunction\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mm\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mm\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mm\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_8896/2887075090.py\u001b[0m in \u001b[0;36mDerivative\u001b[1;34m(f, x, h)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mDerivative\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mh\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1e-5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mh\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mh\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mh\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: 'float' object is not callable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.3169057570926729\n"
      ]
     }
    ],
    "source": [
-    "m=-3\n",
+    "m=-1\n",
     "\n",
     "for i in range(0,1000):\n",
-    "    m-=Derivative(Function(m),m)/Derivative_2(Function(m),m)\n",
+    "    m-=Derivative(Function,m)/Derivative_2(Function,m)\n",
     "print(m)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 182,
-   "id": "97a668df",
+   "id": "5e0f3512",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -155,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 183,
-   "id": "2efc0415",
+   "id": "afcc0bf7",
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 173,
-   "id": "da619144",
+   "id": "a818ebc5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 174,
-   "id": "61682e03",
+   "id": "5a6b6067",
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": 180,
-   "id": "c5cc0922",
+   "id": "59b80ac5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 181,
-   "id": "d9a3ec85",
+   "id": "038a743d",
    "metadata": {},
    "outputs": [
     {
