Revisar simbolo Levi-Civita

--- a/Taller 3/Algebra_Lineal/Punto13y14_Algebra Lineal.ipynb
+++ b/Taller 3/Algebra_Lineal/Punto13y14_Algebra Lineal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "48838acd",
    "metadata": {},
    "outputs": [],
@@ -20,16 +20,16 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2329b8a9",
+   "cell_type": "markdown",
+   "id": "cbc34433",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Punto 13"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 71,
    "id": "aad14748",
    "metadata": {},
    "outputs": [
@@ -37,19 +37,19 @@
      "data": {
       "text/plain": [
        "array([[[ 0.,  0.,  0.],\n",
-       "        [ 0.,  0., -1.],\n",
-       "        [ 0.,  1.,  0.]],\n",
+       "        [ 0.,  0.,  1.],\n",
+       "        [ 0., -1.,  0.]],\n",
        "\n",
-       "       [[ 0.,  0.,  1.],\n",
+       "       [[ 0.,  0., -1.],\n",
        "        [ 0.,  0.,  0.],\n",
-       "        [-1.,  0.,  0.]],\n",
+       "        [ 1.,  0.,  0.]],\n",
        "\n",
-       "       [[ 0., -1.,  0.],\n",
-       "        [ 1.,  0.,  0.],\n",
+       "       [[ 0.,  1.,  0.],\n",
+       "        [-1.,  0.,  0.],\n",
        "        [ 0.,  0.,  0.]]])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,188 +59,125 @@
     "Jy=np.ones([3,3])\n",
     "Jz=np.ones([3,3])\n",
     "\n",
-    "MJ=np.array([Jx,Jy,Jz])\n",
+    "LC=np.array([Jx,Jy,Jz])\n",
+    "MJ=np.zeros([3,3,3])\n",
     "\n",
-    "\n",
-    "for k in range(len(Jx)):\n",
+    "for i in range(len(Jx)):\n",
     "    for j in range(len(Jy)):\n",
-    "        for i in range(len(Jz)):\n",
+    "        for k in range(len(Jz)):\n",
     "\n",
-    "            if i-j==1 or i-j==-2:\n",
-    "                MJ[k,j,i]=-1\n",
-    "                \n",
+    "            if (i>j and ((i+j)%2==1)) or (j>k and k>i):\n",
+    "                LC[i,j,k]=-1\n",
+    "                #print(k,j,i)\n",
+    "            \n",
     "            if i==j or j==k or i ==k:\n",
-    "                MJ[k,j,i]=0\n",
-    "MJ"
+    "                LC[i,j,k]=0\n",
+    "    MJ[i]=LC[i].T\n",
+    "LC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "c85d05a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "for i in range(len(Jx)):\n",
+    "    for j in range(len(Jy)):\n",
+    "        for k in range(len(Jz)):\n",
+    "            ecu_L=MJ[i]@MJ[j]-MJ[j]@MJ[i]\n",
+    "            #print(MJ[0]@MJ[0])\n",
+    "            ecu_R=LC[i,j,k]*MJ[k]\n",
+    "            \n",
+    "            #print(ecu_R)\n",
+    "            #print(ecu_L==ecu_R)\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "715a9a06",
+   "metadata": {},
+   "source": [
+    "# Punto 14"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "ff248ba4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sx=np.array([[0,1],[1,0]])\n",
+    "sy=np.array([[0,-1j],[1j,0]])\n",
+    "sz=np.array([[1,0],[0,1]])\n",
+    "\n",
+    "Ms=np.array([sx,sy,sz])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8e1eedc",
+   "id": "e7d959bd",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "c85d05a9",
+   "execution_count": 88,
+   "id": "e479dd12",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Izquierda [[0. 0. 0.]\n",
-      " [0. 0. 0.]\n",
-      " [0. 0. 0.]] Derecha [[ 0.  0.  0.]\n",
-      " [ 0.  0. -0.]\n",
-      " [ 0.  0.  0.]]\n",
-      "Izquierda [[ 0.  1.  0.]\n",
-      " [-1.  0.  0.]\n",
-      " [ 0.  0.  0.]] Derecha [[ 0.  0.  0.]\n",
-      " [ 0.  0. -0.]\n",
-      " [ 0.  0.  0.]]\n",
-      "Izquierda [[ 0.  0.  1.]\n",
-      " [ 0.  0.  0.]\n",
-      " [-1.  0.  0.]] Derecha [[ 0.  0.  0.]\n",
-      " [ 0.  0. -0.]\n",
-      " [ 0.  0.  0.]]\n",
-      "Izquierda [[ 0. -1.  0.]\n",
-      " [ 1.  0.  0.]\n",
-      " [ 0.  0.  0.]] Derecha [[ 0.  0.  0.]\n",
-      " [ 0.  0. -0.]\n",
-      " [ 0.  0.  0.]]\n",
-      "Izquierda [[0. 0. 0.]\n",
-      " [0. 0. 0.]\n",
-      " [0. 0. 0.]] Derecha [[ 0.  0.  0.]\n",
-      " [ 0.  0. -0.]\n",
-      " [ 0.  0.  0.]]\n",
-      "Izquierda [[ 0.  0.  0.]\n",
-      " [ 0.  0.  1.]\n",
-      " [ 0. -1.  0.]] Derecha [[-0. -0. -0.]\n",
-      " [-0. -0.  1.]\n",
-      " [-0. -1. -0.]]\n",
-      "Izquierda [[ 0.  0. -1.]\n",
-      " [ 0.  0.  0.]\n",
-      " [ 1.  0.  0.]] Derecha [[ 0.  0.  0.]\n",
-      " [ 0.  0. -0.]\n",
-      " [ 0.  0.  0.]]\n",
-      "Izquierda [[ 0.  0.  0.]\n",
-      " [ 0.  0. -1.]\n",
-      " [ 0.  1.  0.]] Derecha [[ 0.  0.  0.]\n",
-      " [ 0.  0. -1.]\n",
-      " [ 0.  1.  0.]]\n",
-      "Izquierda [[0. 0. 0.]\n",
-      " [0. 0. 0.]\n",
-      " [0. 0. 0.]] Derecha [[ 0.  0.  0.]\n",
-      " [ 0.  0. -0.]\n",
-      " [ 0.  0.  0.]]\n",
-      "Izquierda [[0. 0. 0.]\n",
-      " [0. 0. 0.]\n",
-      " [0. 0. 0.]] Derecha [[ 0.  0.  0.]\n",
-      " [ 0.  0.  0.]\n",
-      " [-0.  0.  0.]]\n",
-      "Izquierda [[ 0.  1.  0.]\n",
-      " [-1.  0.  0.]\n",
-      " [ 0.  0.  0.]] Derecha [[ 0.  0.  0.]\n",
-      " [ 0.  0.  0.]\n",
-      " [-0.  0.  0.]]\n",
-      "Izquierda [[ 0.  0.  1.]\n",
-      " [ 0.  0.  0.]\n",
-      " [-1.  0.  0.]] Derecha [[ 0.  0.  1.]\n",
-      " [ 0.  0.  0.]\n",
-      " [-1.  0.  0.]]\n",
-      "Izquierda [[ 0. -1.  0.]\n",
-      " [ 1.  0.  0.]\n",
-      " [ 0.  0.  0.]] Derecha [[ 0.  0.  0.]\n",
-      " [ 0.  0.  0.]\n",
-      " [-0.  0.  0.]]\n",
-      "Izquierda [[0. 0. 0.]\n",
-      " [0. 0. 0.]\n",
-      " [0. 0. 0.]] Derecha [[ 0.  0.  0.]\n",
-      " [ 0.  0.  0.]\n",
-      " [-0.  0.  0.]]\n",
-      "Izquierda [[ 0.  0.  0.]\n",
-      " [ 0.  0.  1.]\n",
-      " [ 0. -1.  0.]] Derecha [[ 0.  0.  0.]\n",
-      " [ 0.  0.  0.]\n",
-      " [-0.  0.  0.]]\n",
-      "Izquierda [[ 0.  0. -1.]\n",
-      " [ 0.  0.  0.]\n",
-      " [ 1.  0.  0.]] Derecha [[-0. -0. -1.]\n",
-      " [-0. -0. -0.]\n",
-      " [ 1. -0. -0.]]\n",
-      "Izquierda [[ 0.  0.  0.]\n",
-      " [ 0.  0. -1.]\n",
-      " [ 0.  1.  0.]] Derecha [[ 0.  0.  0.]\n",
-      " [ 0.  0.  0.]\n",
-      " [-0.  0.  0.]]\n",
-      "Izquierda [[0. 0. 0.]\n",
-      " [0. 0. 0.]\n",
-      " [0. 0. 0.]] Derecha [[ 0.  0.  0.]\n",
-      " [ 0.  0.  0.]\n",
-      " [-0.  0.  0.]]\n",
-      "Izquierda [[0. 0. 0.]\n",
-      " [0. 0. 0.]\n",
-      " [0. 0. 0.]] Derecha [[ 0. -0.  0.]\n",
-      " [ 0.  0.  0.]\n",
-      " [ 0.  0.  0.]]\n",
-      "Izquierda [[ 0.  1.  0.]\n",
-      " [-1.  0.  0.]\n",
-      " [ 0.  0.  0.]] Derecha [[-0.  1. -0.]\n",
-      " [-1. -0. -0.]\n",
-      " [-0. -0. -0.]]\n",
-      "Izquierda [[ 0.  0.  1.]\n",
-      " [ 0.  0.  0.]\n",
-      " [-1.  0.  0.]] Derecha [[ 0. -0.  0.]\n",
-      " [ 0.  0.  0.]\n",
-      " [ 0.  0.  0.]]\n",
-      "Izquierda [[ 0. -1.  0.]\n",
-      " [ 1.  0.  0.]\n",
-      " [ 0.  0.  0.]] Derecha [[ 0. -1.  0.]\n",
-      " [ 1.  0.  0.]\n",
-      " [ 0.  0.  0.]]\n",
-      "Izquierda [[0. 0. 0.]\n",
-      " [0. 0. 0.]\n",
-      " [0. 0. 0.]] Derecha [[ 0. -0.  0.]\n",
-      " [ 0.  0.  0.]\n",
-      " [ 0.  0.  0.]]\n",
-      "Izquierda [[ 0.  0.  0.]\n",
-      " [ 0.  0.  1.]\n",
-      " [ 0. -1.  0.]] Derecha [[ 0. -0.  0.]\n",
-      " [ 0.  0.  0.]\n",
-      " [ 0.  0.  0.]]\n",
-      "Izquierda [[ 0.  0. -1.]\n",
-      " [ 0.  0.  0.]\n",
-      " [ 1.  0.  0.]] Derecha [[ 0. -0.  0.]\n",
-      " [ 0.  0.  0.]\n",
-      " [ 0.  0.  0.]]\n",
-      "Izquierda [[ 0.  0.  0.]\n",
-      " [ 0.  0. -1.]\n",
-      " [ 0.  1.  0.]] Derecha [[ 0. -0.  0.]\n",
-      " [ 0.  0.  0.]\n",
-      " [ 0.  0.  0.]]\n",
-      "Izquierda [[0. 0. 0.]\n",
-      " [0. 0. 0.]\n",
-      " [0. 0. 0.]] Derecha [[ 0. -0.  0.]\n",
-      " [ 0.  0.  0.]\n",
-      " [ 0.  0.  0.]]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[[ 0., -1.],\n",
+       "        [ 1.,  0.]],\n",
+       "\n",
+       "       [[ 0., -1.],\n",
+       "        [ 1.,  0.]],\n",
+       "\n",
+       "       [[ 0., -1.],\n",
+       "        [ 1.,  0.]]])"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "MJ[0]@MJ[1]-MJ[1]@MJ[0]\n",
-    "\n",
-    "for k in range(len(Jx)):\n",
-    "    for j in range(len(Jy)):\n",
-    "        for i in range(len(Jz)):\n",
-    "            ecu_L=MJ[i]@MJ[j]-MJ[j]@MJ[i]\n",
-    "            ecu_R=MJ[k,j,i]*MJ[k]\n",
+    "LCi=np.zeros([3,2,2])\n",
+    "for i in range(LCi.shape[0]):\n",
+    "    for j in range(LCi.shape[1]):\n",
+    "        for k in range(LCi.shape[2]):\n",
+    "            if j>k:\n",
+    "                LCi[i,j,k]=1\n",
+    "            elif k>j:\n",
+    "                LCi[i,j,k]=-1\n",
+    "                \n",
+    "LCi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d7ff2a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(len(Ms)):\n",
+    "    for j in range(len(sy)):\n",
+    "        for k in range(len(sz)):\n",
     "            \n",
-    "            #print('Izquierda',ecu_L,'Derecha', ecu_R)\n",
-    "            "
+    "            ecu_L=Ms[i]@Ms[j]-Ms[j]@Ms[i]\n",
+    "          \n",
+    "            ecu_R=2j*LCi[i,j,k]*Ms[k]"
    ]
   }
  ],
