--- a/Taller 3/Algebra_Lineal/Punto12_AlgebraLineal.ipynb
+++ b/Taller 3/Algebra_Lineal/Punto12_AlgebraLineal.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "id": "9217ca80",
    "metadata": {},
    "outputs": [],
@@ -44,14 +44,14 @@
     "    J = np.zeros((dim,dim))\n",
     "    \n",
     "    for i in range(dim):\n",
-    "        J[i,0] = (G[i]( r[0] + 2*h,r[1],r[2]) - 4*G[i]( r[0] + h,r[1],r[2])+6*G[i](r[0],r[1],r[2])-4*G[i]( r[0]-h,r[1],r[2])+\n",
-    "                  G[i]( r[0] - 2*h,r[1],r[2]))/(2*h)**4\n",
+    "        J[i,0] = (G[i]( r[0] + 4*h,r[1],r[2]) - 4*G[i]( r[0] + 2*h,r[1],r[2]) + 6*G[i](r[0],r[1],r[2]) \n",
+    "                  - 4*G[i]( r[0] - 2*h,r[1],r[2]) + G[i]( r[0] - 2*h,r[1],r[2]))/((2*h)**4)\n",
     "        \n",
-    "        J[i,1] = (G[i]( r[0] ,r[1]+2*h,r[2]) - 4*G[i]( r[0],r[1]+h,r[2])+6*G[i](r[0],r[1],r[2])-4*G[i]( r[0],r[1]-h,r[2])+\n",
-    "                  G[i]( r[0] ,r[1]-2*h,r[2]))/(2*h)**4\n",
+    "        J[i,1] = (G[i]( r[0] ,r[1] + 4*h,r[2]) - 4*G[i]( r[0],r[1] + 2*h,r[2]) + 6*G[i](r[0],r[1],r[2]) \n",
+    "                  - 4*G[i]( r[0],r[1] - 2*h,r[2]) + G[i]( r[0] ,r[1] - 4*h,r[2]))/((2*h)**4)\n",
     "        \n",
-    "        J[i,2] = (G[i]( r[0] ,r[1],r[2]+2*h) - 4*G[i]( r[0],r[1],r[2]+h)+6*G[i](r[0],r[1],r[2])-4*G[i]( r[0],r[1],r[2]-h)+\n",
-    "                  G[i]( r[0] ,r[1],r[2]-2*h))/(2*h)**4\n",
+    "        J[i,2] = (G[i]( r[0] ,r[1],r[2] + 4*h) - 4*G[i]( r[0],r[1],r[2] + 2*h) + 6*G[i](r[0],r[1],r[2]) \n",
+    "                  - 4*G[i]( r[0],r[1],r[2] - 2*h) + G[i]( r[0] ,r[1],r[2] - 4*h))/((2*h)**4)\n",
     "        \n",
     "        \n",
     "    return J.T"
@@ -59,36 +59,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 69,
    "id": "ec3f1567",
    "metadata": {},
    "outputs": [],
    "source": [
-    "h=1e-2"
+    "h=1e-4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 70,
    "id": "db41cfa2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-5.55111512e-09,  1.11022302e-08, -4.44089210e-08],\n",
-       "       [ 0.00000000e+00,  5.55111512e-09, -4.44089210e-08],\n",
-       "       [ 0.00000000e+00,  0.00000000e+00, -1.33226763e-07]])"
+       "array([[ 7.50000000e+11,  6.24625000e+10, -1.46047052e+11],\n",
+       "       [ 5.55111512e-01, -1.11022302e+00, -3.10862447e+01],\n",
+       "       [ 5.55111512e-01,  0.00000000e+00, -4.44089210e+00]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\n",
-    "GetJacobian(G,[0.,0.,0.],h)"
+    "GetJacobian(G,[0.5,0.5,0.5],h)"
    ]
   },
   {
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "id": "f035456e",
    "metadata": {},
    "outputs": [],
@@ -115,35 +115,37 @@
     "    for i in range(dim):\n",
     "        J[i,0] = (G[i]( r[0] + 2*h,r[1],r[2]) + 2*G[i]( r[0],r[1],r[2])\n",
     "                  - G[i]( r[0] - 2*h,r[1],r[2]))/((2*h)**2)\n",
-    "        J[i,1] = (G[i]( r[0] ,r[1] + 2*h,r[2]) + 2*G[i]( r[0],r[1],r[2])\n",
-    "                  - G[i]( r[0] ,r[1]- 2*h,r[2]))/((2*h)**2)\n",
-    "        J[i,2] = (G[i]( r[0] ,r[1],r[2] + 2*h) + 2*G[i]( r[0] ,r[1],r[2])\n",
-    "                  - G[i]( r[0] ,r[1],r[2]-2*h))/((2*h)**2)\n",
     "        \n",
-    "    return J"
+    "        J[i,1] = (G[i]( r[0] ,r[1] + 2*h,r[2]) + 2*G[i]( r[0],r[1],r[2])\n",
+    "                  - G[i]( r[0] ,r[1] - 2*h,r[2]))/((2*h)**2)\n",
+    "        \n",
+    "        J[i,2] = (G[i]( r[0] ,r[1],r[2] + 2*h) + 2*G[i]( r[0] ,r[1],r[2])\n",
+    "                  - G[i]( r[0] ,r[1],r[2] - 2*h))/((2*h)**2)\n",
+    "        \n",
+    "    return J.T"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 71,
    "id": "62045944",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 6.00000000e-09, -1.50000000e-18, -1.50000000e-18],\n",
-       "       [ 0.00000000e+00,  9.00000000e-09,  9.43677615e-19],\n",
-       "       [ 1.57079633e-17,  1.57079633e-17,  6.00000000e-08]])"
+       "array([[   910.87578289,  31523.56384651, 303644.82236109],\n",
+       "       [   335.61576648,  32373.56384651, 303644.82236109],\n",
+       "       [   335.61576648,  31517.44004939, 309761.64442556]])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "GetJacobian2(G,[0.,0.,0.],1e9)"
+    "GetJacobian2(G,[0.5,0.5,0.5],1e-2)"
    ]
   },
   {
