--- a/Taller 3/Algebra_Lineal/Punto6y9_Algebra Lineal.ipynb
+++ b/Taller 3/Algebra_Lineal/Punto6y9_Algebra Lineal.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "12319a8d",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "cab55853",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "18c167cb",
    "metadata": {},
    "outputs": [
@@ -79,54 +79,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.48290601401044775\n",
-      "(array([1., 1., 1.]), 11)\n",
-      "0.7779690592966855\n",
-      "(array([1., 1., 1.]), 14)\n",
-      "0.9769452873910434\n",
-      "(array([1., 1., 1.]), 16)\n",
-      "1.1201983070231147\n",
-      "(array([1., 1., 1.]), 17)\n",
-      "1.2282609098099249\n",
-      "(array([1., 1., 1.]), 21)\n",
-      "1.312681548470413\n",
-      "(array([1., 1., 1.]), 28)\n",
-      "1.3804537884929204\n",
-      "(array([1., 1., 1.]), 35)\n",
-      "1.4360603997530677\n",
-      "(array([1., 1., 1.]), 43)\n",
-      "1.4825073212020587\n",
-      "(array([1., 1., 1.]), 53)\n",
-      "1.5218855527786235\n",
-      "(array([1., 1., 1.]), 64)\n",
-      "1.5556946476191547\n",
-      "(array([1., 1., 1.]), 78)\n",
-      "1.585038017404995\n",
-      "(array([1., 1., 1.]), 94)\n",
-      "1.6107456406550908\n",
-      "(array([1., 1., 1.]), 114)\n",
-      "1.6334538199480688\n",
-      "(array([1., 1., 1.]), 139)\n",
-      "1.6536585609016916\n",
-      "(array([1., 1., 1.]), 172)\n",
-      "1.6717522193221865\n",
-      "(array([1., 1., 1.]), 217)\n",
-      "1.6880492314961129\n",
-      "(array([1., 1., 1.]), 282)\n",
-      "1.7028045422059195\n",
-      "(array([1., 1., 1.]), 382)\n",
-      "1.7162270390625716\n",
-      "(array([1., 1., 1.]), 560)\n"
+      "(array([1., 1., 1.]), 16)\n"
      ]
     }
    ],
    "source": [
     "x0 = np.array([0.,0.,0.])\n",
     "it=20\n",
+    "\n",
+    "print(GausSeidel(A,b,x0,1))\n",
     "for N in range(1,it):\n",
     "    w=2/(1+np.pi/N)\n",
-    "    print(w)\n",
-    "    print(GausSeidel(A,b,x0,w))"
+    "    #print(w)\n",
+    "    #print(GausSeidel(A,b,x0,w))\n",
+    "    \n",
+    "    \n"
    ]
   },
   {
@@ -147,26 +114,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "68de5119",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a=np.array([[4.,1.,1.],[1.,3.,2.],[1.,2.,5.]])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 163,
    "id": "47f599af",
    "metadata": {},
    "outputs": [],
    "source": [
     "def mayor_valor(matriz):\n",
-    "    valor=0\n",
+    "    valor=-np.inf\n",
     "    for i in range(len(matriz)):\n",
     "        for j in range(len(matriz[i])):\n",
-    "            if i!=j and valor<=abs(matriz[i,j]):\n",
+    "            if i!=j and valor<=matriz[i,j]:\n",
     "                \n",
     "                valor=matriz[i,j]\n",
     "                coords=np.array([i,j])\n",
@@ -176,46 +133,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 204,
    "id": "62e36dd5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Valores_Propios (A,itmax=10000):\n",
-    "    RV=np.identity(len(A))\n",
+    "def Vectores_Propios(A, itmax=1000):\n",
+    "    RV =np.identity(len(A))\n",
     "    for it in range(itmax):\n",
+    "        R = np.eye(A.shape[0])\n",
     "        \n",
-    "        R=np.zeros([A.shape[0],A.shape[1]])\n",
-    "        for i in range(A.shape[0]):\n",
-    "            for j in range(A.shape[1]):\n",
-    "                \n",
-    "                mv=mayor_valor(A)\n",
-    "                v=mv[0]\n",
-    "                coords=mv[1]\n",
-    "                \n",
-    "                if A[coords[0],coords[0]]==A[coords[1],coords[1]]:\n",
-    "                    theta=np.pi/4\n",
-    "                else:\n",
-    "                    theta=0.5*np.arctan(2*v/(A[coords[0],coords[0]]-A[coords[1],coords[1]]))\n",
-    "                    \n",
-    "                    \n",
-    "                if coords[0]==i and coords[1]==j:\n",
-    "                    R[i,j]=-np.sin(theta)\n",
-    "                elif coords[1]==i and coords[0]==j:\n",
-    "                    R[i,j]=np.sin(theta)\n",
-    "                elif i==j:\n",
-    "                    R[i,j]=1\n",
-    "                elif coords[0]==i==j or coords[1]==j==i:\n",
-    "                    R[i,j]=np.cos(theta)\n",
+    "        mv = mayor_valor(A)\n",
+    "        v = mv[0]\n",
+    "        coords = mv[1]\n",
+    "        if A[coords[0], coords[0]] == A[coords[1], coords[1]]:\n",
+    "            theta = np.pi / 4\n",
+    "        else:\n",
+    "            t = 2 * v / (A[coords[1], coords[1]] - A[coords[0], coords[0]])\n",
+    "            theta = 0.5 * np.arctan(t)\n",
     "        \n",
-    "        R_inv=np.linalg.inv(R)\n",
-    "        RV=RV@R\n",
-    "        #print(RV)\n",
-    "        A=R_inv@A@R\n",
+    "        R[coords[1], coords[0]] = -np.sin(theta)      \n",
+    "        R[coords[0], coords[1]] = np.sin(theta)\n",
+    "        R[coords[0], coords[0]] = np.cos(theta)\n",
+    "        R[coords[1], coords[1]] = np.cos(theta)\n",
     "        \n",
+    "        R_inv = np.linalg.inv(R)\n",
+    "        RV = np.dot(R.T, RV)\n",
+    "        A = R_inv @ A @ R\n",
     "        \n",
-    "            \n",
-    "    return A,RV\n",
+    "    VP = np.diag(A)\n",
+    "    V = np.linalg.inv(RV)\n",
+    "    return VP, V\n",
     "                \n",
     "                \n",
     "                "
@@ -223,66 +171,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "63eedd1f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([3.39712968, 1.70755584, 6.89531447])"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "vp=Valores_Propios(a)[0]\n",
-    "VP=np.array([])\n",
-    "for i in range(len(vp)):\n",
-    "    VP=np.append(VP,vp[i,i])\n",
-    "VP\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "a4e333f1",
+   "execution_count": 205,
+   "id": "1b998cc9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "lista=Valores_Propios(a)[1]\n"
+    "a=np.array([[4,1,1],[1,3,2],[1,2,5]])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "808e323a",
+   "execution_count": 206,
+   "id": "63eedd1f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Valores,Vectores=Vectores_Propios(a)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
+   "id": "498c7784",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.9747649 ,  0.11353029, -0.52389466],\n",
-       "       [-0.42752203,  0.91768662, -0.58710906],\n",
-       "       [ 0.42593019,  0.68337699,  0.92964653]])"
+       "array([3.39729482, 1.70759867, 6.89510652])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lista"
+    "Valores"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 409,
+   "execution_count": 208,
+   "id": "a4e333f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.8856695 , -0.17094212,  0.43170398],\n",
+       "       [-0.07555865,  0.86430837,  0.49725438],\n",
+       "       [-0.45812708, -0.47302201,  0.75257541]])"
+      ]
+     },
+     "execution_count": 208,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Vectores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 209,
    "id": "1cf8d2c9",
    "metadata": {},
    "outputs": [
@@ -295,7 +248,7 @@
        "        [ 0.75257583, -0.45794385,  0.47319874]]))"
       ]
      },
-     "execution_count": 409,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,33 +256,6 @@
    "source": [
     "np.linalg.eig(a)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "256256f1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 405,
-   "id": "3bfb3cfb",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.0"
-      ]
-     },
-     "execution_count": 405,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   }
  ],
  "metadata": {
