--- a/Taller 3/Algebra_Lineal/Punto13y14_Algebra Lineal.ipynb
+++ b/Taller 3/Algebra_Lineal/Punto13y14_Algebra Lineal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "48838acd",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 4,
    "id": "aad14748",
    "metadata": {},
    "outputs": [
@@ -49,7 +49,7 @@
        "        [ 0.,  0.,  0.]]])"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 25,
    "id": "c85d05a9",
    "metadata": {},
    "outputs": [],
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 6,
    "id": "ff248ba4",
    "metadata": {},
    "outputs": [],
@@ -121,15 +121,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "e7d959bd",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "LC[0,0,0]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 7,
    "id": "e479dd12",
    "metadata": {},
    "outputs": [
@@ -146,7 +159,7 @@
        "        [ 1.,  0.]]])"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,10 +179,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "8d7ff2a5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ True  True]\n",
+      " [ True  True]]\n",
+      "[[ True False]\n",
+      " [False  True]]\n",
+      "[[False False]\n",
+      " [False False]]\n",
+      "[[False  True]\n",
+      " [ True False]]\n",
+      "[[False  True]\n",
+      " [ True False]]\n",
+      "[[False False]\n",
+      " [False False]]\n",
+      "[[ True False]\n",
+      " [False  True]]\n",
+      "[[ True  True]\n",
+      " [ True  True]]\n",
+      "[[ True  True]\n",
+      " [ True  True]]\n",
+      "[[ True False]\n",
+      " [False  True]]\n",
+      "[[ True False]\n",
+      " [False  True]]\n",
+      "[[ True  True]\n",
+      " [ True  True]]\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(len(Ms)):\n",
     "    for j in range(len(sy)):\n",
@@ -177,8 +221,29 @@
     "            \n",
     "            ecu_L=Ms[i]@Ms[j]-Ms[j]@Ms[i]\n",
     "          \n",
-    "            ecu_R=2j*LCi[i,j,k]*Ms[k]"
+    "            ecu_R=2j*(LCi[i,j,k]*Ms[k])\n",
+    "            print(ecu_R==ecu_L)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "a9da1fca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ True,  True],\n",
+       "       [ True,  True]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
