--- a/Taller 3/Algebra_Lineal/Punto6y9_Algebra Lineal.ipynb
+++ b/Taller 3/Algebra_Lineal/Punto6y9_Algebra Lineal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "f7da1198",
    "metadata": {},
    "outputs": [],
@@ -22,23 +22,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "12319a8d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "A = np.array([[3,-1,-1],[-1.,3.,1.],[2,1,4]])\n",
-    "b = np.array([1.,3.,7.])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 113,
    "id": "cab55853",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def GausSeidel(A,b,x0,w, itmax=1000, tolerancia= 1e-9):\n",
+    "def SOR(A,b,x0,w, itmax=1000, tolerancia= 1e-9):\n",
     "    \n",
     "    x = x0.copy()\n",
     "    \n",
@@ -55,7 +44,7 @@
     "                if j!=i:\n",
     "                    sum_ += A[i,j]*x[j]\n",
     "                    \n",
-    "            x[i] = (1-w)*x[i-1]+w*(b[i] - sum_)/A[i,i]\n",
+    "            x[i] = (1-w)*x[i]+w*(b[i] - sum_)/A[i,i]\n",
     "            \n",
     "        #print(it,x)\n",
     "        \n",
@@ -71,7 +60,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
+   "id": "12319a8d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = np.array([[3,-1,-1],[-1.,3.,1.],[2,1,4]])\n",
+    "b = np.array([1.,3.,7.])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
    "id": "18c167cb",
    "metadata": {},
    "outputs": [
@@ -79,22 +79,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(array([1., 1., 1.]), 16)\n"
+      "El peso que reduce las iteraciones a 15 es 0.9769452873910434\n"
      ]
     }
    ],
    "source": [
     "x0 = np.array([0.,0.,0.])\n",
-    "it=20\n",
+    "itmax=1000\n",
     "\n",
-    "print(GausSeidel(A,b,x0,1))\n",
-    "for N in range(1,it):\n",
-    "    w=2/(1+np.pi/N)\n",
-    "    #print(w)\n",
-    "    #print(GausSeidel(A,b,x0,w))\n",
+    "i=1\n",
+    "w=2/(1+np.pi/i)\n",
+    "it=SOR(A,b,x0,i, itmax)[1]\n",
+    "\n",
+    "while SOR(A,b,x0,w, itmax)[1]<(itmax-1):\n",
+    "  \n",
+    "    w=2/(1+np.pi/i)\n",
+    "    if it>SOR(A,b,x0,w, itmax)[1]:\n",
+    "        min_w=w\n",
+    "        it=SOR(A,b,x0,w, itmax)[1]\n",
+    "       \n",
+    "    i+=1\n",
+    "        \n",
+    "print('El peso que reduce las iteraciones a ' +str(it)+' es '+str(min_w))\n",
+    "\n",
+    "\n",
     "    \n",
     "    \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47d4fcc6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -114,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 159,
    "id": "47f599af",
    "metadata": {},
    "outputs": [],
@@ -133,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 160,
    "id": "62e36dd5",
    "metadata": {},
    "outputs": [],
@@ -171,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 161,
    "id": "1b998cc9",
    "metadata": {},
    "outputs": [],
@@ -181,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 162,
    "id": "63eedd1f",
    "metadata": {},
    "outputs": [],
@@ -191,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 163,
    "id": "498c7784",
    "metadata": {},
    "outputs": [
@@ -201,7 +220,7 @@
        "array([3.39729482, 1.70759867, 6.89510652])"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 164,
    "id": "a4e333f1",
    "metadata": {},
    "outputs": [
@@ -224,7 +243,7 @@
        "       [-0.45812708, -0.47302201,  0.75257541]])"
       ]
      },
-     "execution_count": 208,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 165,
    "id": "1cf8d2c9",
    "metadata": {},
    "outputs": [
@@ -248,7 +267,7 @@
        "        [ 0.75257583, -0.45794385,  0.47319874]]))"
       ]
      },
-     "execution_count": 209,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,6 +275,35 @@
    "source": [
     "np.linalg.eig(a)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "id": "711ae323",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Los vectores propios que corresponden al valor propio 3.3972948158577623 son [ 0.8856695  -0.07555865 -0.45812708]\n",
+      "Los vectores propios que corresponden al valor propio 1.7075986682188165 son [-0.17094212  0.86430837 -0.47302201]\n",
+      "Los vectores propios que corresponden al valor propio 6.895106515923421 son [0.43170398 0.49725438 0.75257541]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(Vectores)):\n",
+    "    print('Los vectores propios que corresponden al valor propio '+str(Valores[i])+' son ' + str(Vectores[:,i]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ded9d0fd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
