--- a/Taller 3/Algebra_Lineal/Punto12_AlgebraLineal.ipynb
+++ b/Taller 3/Algebra_Lineal/Punto12_AlgebraLineal.ipynb
@@ -2,12 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "cae34591",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "import sympy as sym\n",
+    "from scipy.misc import derivative"
    ]
   },
   {
@@ -20,146 +22,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 238,
    "id": "96548284",
    "metadata": {},
    "outputs": [],
    "source": [
-    "G = (lambda x,y,z: 6*x - 2*np.cos(y*z) - 1., \\\n",
-    "    lambda x,y,z: 9*y + (x**2+np.sin(z)+1.06)*0.5 +0.9, \\\n",
-    "    lambda x,y,z: 60*z + 3*np.exp(-x*y) + 10*np.pi - 3.)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "id": "9217ca80",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def GetJacobian(G,r,h):\n",
-    "    \n",
-    "    dim = len(G)\n",
-    "    \n",
-    "    J = np.zeros((dim,dim))\n",
-    "    \n",
-    "    for i in range(dim):\n",
-    "        J[i,0] = (G[i]( r[0] + 4*h,r[1],r[2]) - 4*G[i]( r[0] + 2*h,r[1],r[2]) + 6*G[i](r[0],r[1],r[2]) \n",
-    "                  - 4*G[i]( r[0] - 2*h,r[1],r[2]) + G[i]( r[0] - 2*h,r[1],r[2]))/((2*h)**4)\n",
-    "        \n",
-    "        J[i,1] = (G[i]( r[0] ,r[1] + 4*h,r[2]) - 4*G[i]( r[0],r[1] + 2*h,r[2]) + 6*G[i](r[0],r[1],r[2]) \n",
-    "                  - 4*G[i]( r[0],r[1] - 2*h,r[2]) + G[i]( r[0] ,r[1] - 4*h,r[2]))/((2*h)**4)\n",
-    "        \n",
-    "        J[i,2] = (G[i]( r[0] ,r[1],r[2] + 4*h) - 4*G[i]( r[0],r[1],r[2] + 2*h) + 6*G[i](r[0],r[1],r[2]) \n",
-    "                  - 4*G[i]( r[0],r[1],r[2] - 2*h) + G[i]( r[0] ,r[1],r[2] - 4*h))/((2*h)**4)\n",
-    "        \n",
-    "        \n",
-    "    return J.T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "id": "ec3f1567",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "h=1e-4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "id": "db41cfa2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 7.50000000e+11,  6.24625000e+10, -1.46047052e+11],\n",
-       "       [ 5.55111512e-01, -1.11022302e+00, -3.10862447e+01],\n",
-       "       [ 5.55111512e-01,  0.00000000e+00, -4.44089210e+00]])"
-      ]
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "def f1(x):\n",
+    "    return 6*x[0] - 2*np.cos(x[1]*x[2]) - 1\n",
     "\n",
-    "GetJacobian(G,[0.5,0.5,0.5],h)"
+    "def f2(x):\n",
+    "    return 9*x[1] + np.sqrt(x[0]**2 + np.sin(x[2]) + 1.06) + 0.9\n",
+    "\n",
+    "def f3(x):\n",
+    "    return 60*x[2] + 3*(np.e**(-x[0]*x[1])) + 10*np.pi - 3\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1f0f4522",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "f035456e",
+   "execution_count": 264,
+   "id": "08e38061",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def GetJacobian2(G,r,h):\n",
+    "def dco4(f,x, h, dr):\n",
     "    \n",
-    "    dim = len(G)\n",
+    "    result=-f(x+2*h*dr)+8*f(x+h*dr)-8*f(x-h*dr)+f(x-2*h*dr)\n",
     "    \n",
-    "    J = np.zeros((dim,dim))\n",
-    "    \n",
-    "    for i in range(dim):\n",
-    "        J[i,0] = (G[i]( r[0] + 2*h,r[1],r[2]) + 2*G[i]( r[0],r[1],r[2])\n",
-    "                  - G[i]( r[0] - 2*h,r[1],r[2]))/((2*h)**2)\n",
-    "        \n",
-    "        J[i,1] = (G[i]( r[0] ,r[1] + 2*h,r[2]) + 2*G[i]( r[0],r[1],r[2])\n",
-    "                  - G[i]( r[0] ,r[1] - 2*h,r[2]))/((2*h)**2)\n",
-    "        \n",
-    "        J[i,2] = (G[i]( r[0] ,r[1],r[2] + 2*h) + 2*G[i]( r[0] ,r[1],r[2])\n",
-    "                  - G[i]( r[0] ,r[1],r[2] - 2*h))/((2*h)**2)\n",
-    "        \n",
-    "    return J.T"
+    "    return result/((12*h))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "62045944",
+   "execution_count": 259,
+   "id": "9c3184c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dco2(f,x,h,dr):\n",
+    "    result =f(x+h*dr)-f(x-h*dr)\n",
+    "    return result/(2*h)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 253,
+   "id": "1cdeb6df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Jacobian(functions,df,pts,h):\n",
+    "    \n",
+    "    #functions=np.array([f1,f2,f3])\n",
+    "    J = np.zeros((len(functions),len(functions)))\n",
+    "    \n",
+    "    for i in range(len(functions)):\n",
+    "        for j in range(len(functions)):\n",
+    "           \n",
+    "            dr=np.zeros(len(functions))\n",
+    "            dr[j]+=1\n",
+    "            #print(dr)\n",
+    "            J[i,j]=df(functions[i],pts,h,dr)\n",
+    "        \n",
+    "    return J"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 254,
+   "id": "35f2bd3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "G=[f1,f2,f3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 255,
+   "id": "842cb765",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pts=np.array([0.5,0.5,0.5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 256,
+   "id": "9350459f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h=0.01\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 265,
+   "id": "5e3598c0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[   910.87578289,  31523.56384651, 303644.82236109],\n",
-       "       [   335.61576648,  32373.56384651, 303644.82236109],\n",
-       "       [   335.61576648,  31517.44004939, 309761.64442556]])"
+       "array([[ 6.        ,  0.24740396,  0.24740396],\n",
+       "       [ 0.37377753,  9.        ,  0.32802064],\n",
+       "       [-1.16820117, -1.16820117, 60.        ]])"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 265,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "GetJacobian2(G,[0.5,0.5,0.5],1e-2)"
+    "Jacobian(G,dco4,pts,h)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 261,
+   "id": "8010ac95",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 6.        ,  0.24740396,  0.24740396],\n",
+       "       [ 0.37377753,  9.        ,  0.32802064],\n",
+       "       [-1.16820118, -1.16820118, 60.        ]])"
+      ]
+     },
+     "execution_count": 261,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Jacobian(G,dco2,pts,h**2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4dc1dbdc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "73913dec",
+   "id": "0ade1280",
    "metadata": {},
    "outputs": [],
    "source": []
