--- a/Taller 3/Algebra_Lineal/Punto12_AlgebraLineal.ipynb
+++ b/Taller 3/Algebra_Lineal/Punto12_AlgebraLineal.ipynb
@@ -2,14 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "cae34591",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import sympy as sym\n",
-    "from scipy.misc import derivative"
+    "import numpy as np\n"
    ]
   },
   {
@@ -22,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 2,
    "id": "96548284",
    "metadata": {},
    "outputs": [],
@@ -39,8 +37,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
-   "id": "08e38061",
+   "execution_count": 3,
+   "id": "b4647ab2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,8 +51,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
-   "id": "9c3184c3",
+   "execution_count": 4,
+   "id": "666a32b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 5,
    "id": "1cdeb6df",
    "metadata": {},
    "outputs": [],
@@ -88,8 +86,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
-   "id": "35f2bd3e",
+   "execution_count": 6,
+   "id": "2e29d79f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,8 +96,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
-   "id": "842cb765",
+   "execution_count": 7,
+   "id": "34afb617",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,8 +106,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
-   "id": "9350459f",
+   "execution_count": 8,
+   "id": "79f715da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,8 +116,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
-   "id": "5e3598c0",
+   "execution_count": 9,
+   "id": "0f0bea4c",
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +128,7 @@
        "       [-1.16820117, -1.16820117, 60.        ]])"
       ]
      },
-     "execution_count": 265,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,8 +139,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
-   "id": "8010ac95",
+   "execution_count": 10,
+   "id": "1bdb2079",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +151,7 @@
        "       [-1.16820118, -1.16820118, 60.        ]])"
       ]
      },
-     "execution_count": 261,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,14 +159,6 @@
    "source": [
     "Jacobian(G,dco2,pts,h**2)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0ade1280",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
