--- a/Taller 3/Algebra_Lineal/Punto13y14_Algebra Lineal.ipynb
+++ b/Taller 3/Algebra_Lineal/Punto13y14_Algebra Lineal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 158,
    "id": "48838acd",
    "metadata": {},
    "outputs": [],
@@ -10,14 +10,6 @@
     "import sympy as sym\n",
     "import numpy as np"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9c6272c6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -29,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 159,
    "id": "aad14748",
    "metadata": {},
    "outputs": [
@@ -49,7 +41,7 @@
        "        [ 0.,  0.,  0.]]])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,22 +70,184 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 160,
    "id": "c85d05a9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Izquierda de la ecuacion \n",
+      " [[0. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]] \n",
+      "Derecha de la ecuación \n",
+      " [[ 0.  0.  0.]\n",
+      " [ 0.  0. -0.]\n",
+      " [ 0.  0.  0.]]\n",
+      "¿Son iguales? True \n",
+      "\n",
+      "Izquierda de la ecuacion \n",
+      " [[0. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]] \n",
+      "Derecha de la ecuación \n",
+      " [[ 0.  0.  0.]\n",
+      " [ 0.  0.  0.]\n",
+      " [-0.  0.  0.]]\n",
+      "¿Son iguales? True \n",
+      "\n",
+      "Izquierda de la ecuacion \n",
+      " [[0. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]] \n",
+      "Derecha de la ecuación \n",
+      " [[ 0. -0.  0.]\n",
+      " [ 0.  0.  0.]\n",
+      " [ 0.  0.  0.]]\n",
+      "¿Son iguales? True \n",
+      "\n",
+      "Izquierda de la ecuacion \n",
+      " [[ 0. -1.  0.]\n",
+      " [ 1.  0.  0.]\n",
+      " [ 0.  0.  0.]] \n",
+      "Derecha de la ecuación \n",
+      " [[ 0. -1.  0.]\n",
+      " [ 1.  0.  0.]\n",
+      " [ 0.  0.  0.]]\n",
+      "¿Son iguales? True \n",
+      "\n",
+      "Izquierda de la ecuacion \n",
+      " [[ 0.  0. -1.]\n",
+      " [ 0.  0.  0.]\n",
+      " [ 1.  0.  0.]] \n",
+      "Derecha de la ecuación \n",
+      " [[-0. -0. -1.]\n",
+      " [-0. -0. -0.]\n",
+      " [ 1. -0. -0.]]\n",
+      "¿Son iguales? True \n",
+      "\n",
+      "Izquierda de la ecuacion \n",
+      " [[ 0.  1.  0.]\n",
+      " [-1.  0.  0.]\n",
+      " [ 0.  0.  0.]] \n",
+      "Derecha de la ecuación \n",
+      " [[-0.  1. -0.]\n",
+      " [-1. -0. -0.]\n",
+      " [-0. -0. -0.]]\n",
+      "¿Son iguales? True \n",
+      "\n",
+      "Izquierda de la ecuacion \n",
+      " [[0. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]] \n",
+      "Derecha de la ecuación \n",
+      " [[ 0.  0.  0.]\n",
+      " [ 0.  0. -0.]\n",
+      " [ 0.  0.  0.]]\n",
+      "¿Son iguales? True \n",
+      "\n",
+      "Izquierda de la ecuacion \n",
+      " [[0. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]] \n",
+      "Derecha de la ecuación \n",
+      " [[ 0.  0.  0.]\n",
+      " [ 0.  0.  0.]\n",
+      " [-0.  0.  0.]]\n",
+      "¿Son iguales? True \n",
+      "\n",
+      "Izquierda de la ecuacion \n",
+      " [[0. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]] \n",
+      "Derecha de la ecuación \n",
+      " [[ 0. -0.  0.]\n",
+      " [ 0.  0.  0.]\n",
+      " [ 0.  0.  0.]]\n",
+      "¿Son iguales? True \n",
+      "\n",
+      "Izquierda de la ecuacion \n",
+      " [[ 0.  0.  0.]\n",
+      " [ 0.  0. -1.]\n",
+      " [ 0.  1.  0.]] \n",
+      "Derecha de la ecuación \n",
+      " [[ 0.  0.  0.]\n",
+      " [ 0.  0. -1.]\n",
+      " [ 0.  1.  0.]]\n",
+      "¿Son iguales? True \n",
+      "\n",
+      "Izquierda de la ecuacion \n",
+      " [[ 0.  0.  1.]\n",
+      " [ 0.  0.  0.]\n",
+      " [-1.  0.  0.]] \n",
+      "Derecha de la ecuación \n",
+      " [[ 0.  0.  1.]\n",
+      " [ 0.  0.  0.]\n",
+      " [-1.  0.  0.]]\n",
+      "¿Son iguales? True \n",
+      "\n",
+      "Izquierda de la ecuacion \n",
+      " [[ 0.  0.  0.]\n",
+      " [ 0.  0.  1.]\n",
+      " [ 0. -1.  0.]] \n",
+      "Derecha de la ecuación \n",
+      " [[-0. -0. -0.]\n",
+      " [-0. -0.  1.]\n",
+      " [-0. -1. -0.]]\n",
+      "¿Son iguales? True \n",
+      "\n",
+      "Izquierda de la ecuacion \n",
+      " [[0. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]] \n",
+      "Derecha de la ecuación \n",
+      " [[ 0.  0.  0.]\n",
+      " [ 0.  0. -0.]\n",
+      " [ 0.  0.  0.]]\n",
+      "¿Son iguales? True \n",
+      "\n",
+      "Izquierda de la ecuacion \n",
+      " [[0. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]] \n",
+      "Derecha de la ecuación \n",
+      " [[ 0.  0.  0.]\n",
+      " [ 0.  0.  0.]\n",
+      " [-0.  0.  0.]]\n",
+      "¿Son iguales? True \n",
+      "\n",
+      "Izquierda de la ecuacion \n",
+      " [[0. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]] \n",
+      "Derecha de la ecuación \n",
+      " [[ 0. -0.  0.]\n",
+      " [ 0.  0.  0.]\n",
+      " [ 0.  0.  0.]]\n",
+      "¿Son iguales? True \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "ecu_L=None\n",
+    "ecu_R=None\n",
     "\n",
     "for i in range(len(Jx)):\n",
     "    for j in range(len(Jy)):\n",
     "        for k in range(len(Jz)):\n",
-    "            ecu_L=MJ[i]@MJ[j]-MJ[j]@MJ[i]\n",
-    "            #print(MJ[0]@MJ[0])\n",
-    "            ecu_R=LC[i,j,k]*MJ[k]\n",
     "            \n",
-    "            #print(ecu_R)\n",
-    "            #print(ecu_L==ecu_R)\n",
+    "            if (i==k==j or i!=k )and (i==k==j or j!=k):\n",
+    "                ecu_L=MJ[i]@MJ[j]-MJ[j]@MJ[i]\n",
+    "                ecu_R=LC[i,j,k]*MJ[k]\n",
+    "                \n",
+    "                print('Izquierda de la ecuacion \\n', ecu_L,'\\n'\n",
+    "                      'Derecha de la ecuación \\n', ecu_R)\n",
+    "                print ('¿Son iguales? '+str((ecu_L==ecu_R).all()),'\\n')\n",
+    "\n",
+    "    \n",
     "            "
    ]
   },
@@ -107,79 +261,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 163,
    "id": "ff248ba4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sx=np.array([[0,1],[1,0]])\n",
-    "sy=np.array([[0,-1j],[1j,0]])\n",
-    "sz=np.array([[1,0],[0,1]])\n",
-    "\n",
-    "Ms=np.array([sx,sy,sz])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "e7d959bd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0"
+       "array([[[ 0.+0.j,  1.+0.j],\n",
+       "        [ 1.+0.j,  0.+0.j]],\n",
+       "\n",
+       "       [[ 0.+0.j, -0.-1.j],\n",
+       "        [ 0.+1.j,  0.+0.j]],\n",
+       "\n",
+       "       [[ 1.+0.j,  0.+0.j],\n",
+       "        [ 0.+0.j, -1.+0.j]]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "LC[0,0,0]"
+    "sx=np.array([[0,1],[1,0]],  dtype=complex)\n",
+    "sy=np.array([[0,-1j],[1j,0]], dtype=complex)\n",
+    "sz=np.array([[1,0],[0,-1]],  dtype=complex)\n",
+    "\n",
+    "Ms=np.array([sx,sy,sz])\n",
+    "Ms"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 164,
    "id": "e479dd12",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[ 0., -1.],\n",
-       "        [ 1.,  0.]],\n",
+       "array([[[ 0.,  0.,  0.],\n",
+       "        [ 0.,  0.,  1.],\n",
+       "        [ 0., -1.,  0.]],\n",
        "\n",
-       "       [[ 0., -1.],\n",
-       "        [ 1.,  0.]],\n",
+       "       [[ 0.,  0., -1.],\n",
+       "        [ 0.,  0.,  0.],\n",
+       "        [ 1.,  0.,  0.]],\n",
        "\n",
-       "       [[ 0., -1.],\n",
-       "        [ 1.,  0.]]])"
+       "       [[ 0.,  1.,  0.],\n",
+       "        [-1.,  0.,  0.],\n",
+       "        [ 0.,  0.,  0.]]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "LCi=np.zeros([3,2,2])\n",
-    "for i in range(LCi.shape[0]):\n",
-    "    for j in range(LCi.shape[1]):\n",
-    "        for k in range(LCi.shape[2]):\n",
-    "            if j>k:\n",
-    "                LCi[i,j,k]=1\n",
-    "            elif k>j:\n",
-    "                LCi[i,j,k]=-1\n",
-    "                \n",
+    "LCi=LC\n",
     "LCi"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 166,
    "id": "8d7ff2a5",
    "metadata": {},
    "outputs": [
@@ -187,63 +334,144 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ True  True]\n",
-      " [ True  True]]\n",
-      "[[ True False]\n",
-      " [False  True]]\n",
-      "[[False False]\n",
-      " [False False]]\n",
-      "[[False  True]\n",
-      " [ True False]]\n",
-      "[[False  True]\n",
-      " [ True False]]\n",
-      "[[False False]\n",
-      " [False False]]\n",
-      "[[ True False]\n",
-      " [False  True]]\n",
-      "[[ True  True]\n",
-      " [ True  True]]\n",
-      "[[ True  True]\n",
-      " [ True  True]]\n",
-      "[[ True False]\n",
-      " [False  True]]\n",
-      "[[ True False]\n",
-      " [False  True]]\n",
-      "[[ True  True]\n",
-      " [ True  True]]\n"
+      "Izquierda de la ecuacion \n",
+      " [[0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j]] \n",
+      "Derecha de la ecuación \n",
+      " [[0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j]]\n",
+      "¿Son iguales? True \n",
+      "\n",
+      "Izquierda de la ecuacion \n",
+      " [[0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j]] \n",
+      "Derecha de la ecuación \n",
+      " [[0.+0.j 0.-0.j]\n",
+      " [0.+0.j 0.+0.j]]\n",
+      "¿Son iguales? True \n",
+      "\n",
+      "Izquierda de la ecuacion \n",
+      " [[0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j]] \n",
+      "Derecha de la ecuación \n",
+      " [[ 0.+0.j  0.+0.j]\n",
+      " [ 0.+0.j -0.+0.j]]\n",
+      "¿Son iguales? True \n",
+      "\n",
+      "Izquierda de la ecuacion \n",
+      " [[0.+2.j 0.+0.j]\n",
+      " [0.+0.j 0.-2.j]] \n",
+      "Derecha de la ecuación \n",
+      " [[ 0.+2.j  0.+0.j]\n",
+      " [ 0.+0.j -0.-2.j]]\n",
+      "¿Son iguales? True \n",
+      "\n",
+      "Izquierda de la ecuacion \n",
+      " [[ 0.+0.j -2.+0.j]\n",
+      " [ 2.+0.j  0.+0.j]] \n",
+      "Derecha de la ecuación \n",
+      " [[ 0.-0.j -2.+0.j]\n",
+      " [ 2.-0.j  0.-0.j]]\n",
+      "¿Son iguales? True \n",
+      "\n",
+      "Izquierda de la ecuacion \n",
+      " [[0.-2.j 0.+0.j]\n",
+      " [0.+0.j 0.+2.j]] \n",
+      "Derecha de la ecuación \n",
+      " [[0.-2.j 0.-0.j]\n",
+      " [0.-0.j 0.+2.j]]\n",
+      "¿Son iguales? True \n",
+      "\n",
+      "Izquierda de la ecuacion \n",
+      " [[0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j]] \n",
+      "Derecha de la ecuación \n",
+      " [[0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j]]\n",
+      "¿Son iguales? True \n",
+      "\n",
+      "Izquierda de la ecuacion \n",
+      " [[0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j]] \n",
+      "Derecha de la ecuación \n",
+      " [[0.+0.j 0.-0.j]\n",
+      " [0.+0.j 0.+0.j]]\n",
+      "¿Son iguales? True \n",
+      "\n",
+      "Izquierda de la ecuacion \n",
+      " [[0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j]] \n",
+      "Derecha de la ecuación \n",
+      " [[ 0.+0.j  0.+0.j]\n",
+      " [ 0.+0.j -0.+0.j]]\n",
+      "¿Son iguales? True \n",
+      "\n",
+      "Izquierda de la ecuacion \n",
+      " [[0.+0.j 0.+2.j]\n",
+      " [0.+2.j 0.+0.j]] \n",
+      "Derecha de la ecuación \n",
+      " [[0.+0.j 0.+2.j]\n",
+      " [0.+2.j 0.+0.j]]\n",
+      "¿Son iguales? True \n",
+      "\n",
+      "Izquierda de la ecuacion \n",
+      " [[ 0.+0.j  2.+0.j]\n",
+      " [-2.+0.j  0.+0.j]] \n",
+      "Derecha de la ecuación \n",
+      " [[ 0.+0.j  2.-0.j]\n",
+      " [-2.+0.j  0.+0.j]]\n",
+      "¿Son iguales? True \n",
+      "\n",
+      "Izquierda de la ecuacion \n",
+      " [[0.+0.j 0.-2.j]\n",
+      " [0.-2.j 0.+0.j]] \n",
+      "Derecha de la ecuación \n",
+      " [[0.-0.j 0.-2.j]\n",
+      " [0.-2.j 0.-0.j]]\n",
+      "¿Son iguales? True \n",
+      "\n",
+      "Izquierda de la ecuacion \n",
+      " [[0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j]] \n",
+      "Derecha de la ecuación \n",
+      " [[0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j]]\n",
+      "¿Son iguales? True \n",
+      "\n",
+      "Izquierda de la ecuacion \n",
+      " [[0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j]] \n",
+      "Derecha de la ecuación \n",
+      " [[0.+0.j 0.-0.j]\n",
+      " [0.+0.j 0.+0.j]]\n",
+      "¿Son iguales? True \n",
+      "\n",
+      "Izquierda de la ecuacion \n",
+      " [[0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j]] \n",
+      "Derecha de la ecuación \n",
+      " [[ 0.+0.j  0.+0.j]\n",
+      " [ 0.+0.j -0.+0.j]]\n",
+      "¿Son iguales? True \n",
+      "\n"
      ]
     }
    ],
    "source": [
     "for i in range(len(Ms)):\n",
-    "    for j in range(len(sy)):\n",
-    "        for k in range(len(sz)):\n",
+    "    for j in range(len(Ms)):\n",
+    "        for k in range(len(Ms)):\n",
+    "            if (i==k==j or i!=k )and (i==k==j or j!=k):\n",
+    "                conmutador=Ms[i]@Ms[j]-Ms[j]@Ms[i]\n",
+    "                Exp=2j*LCi[i,j,k]*Ms[k]\n",
+    "                print('Izquierda de la ecuacion \\n', conmutador,'\\n'\n",
+    "                      'Derecha de la ecuación \\n', Exp)\n",
+    "                print ('¿Son iguales? '+str((conmutador==Exp).all()), '\\n')\n",
     "            \n",
-    "            ecu_L=Ms[i]@Ms[j]-Ms[j]@Ms[i]\n",
-    "          \n",
-    "            ecu_R=2j*(LCi[i,j,k]*Ms[k])\n",
-    "            print(ecu_R==ecu_L)"
+    "                \n",
+    "            \n",
+    "        "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "a9da1fca",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ True,  True],\n",
-       "       [ True,  True]])"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   }
  ],
  "metadata": {
