--- a/Taller 3/Minimos_Cuadrados/Minimos Cuadrados 6.ipynb
+++ b/Taller 3/Minimos_Cuadrados/Minimos Cuadrados 6.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "id": "68738853",
    "metadata": {},
    "outputs": [],
@@ -62,20 +62,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "id": "05e95c80",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "  0% [                                                                                  ]   0 / 522\r",
-      "100% [..................................................................................] 522 / 522"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if not path.exists('Data'):\n",
     "    os.mkdir('Data')\n",
@@ -93,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "id": "370e78a5",
    "metadata": {},
    "outputs": [],
@@ -103,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 4,
    "id": "e2afddb7",
    "metadata": {},
    "outputs": [],
@@ -116,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 5,
    "id": "ab46b473",
    "metadata": {},
    "outputs": [],
@@ -141,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 6,
    "id": "3dad2159",
    "metadata": {},
    "outputs": [
@@ -166,17 +156,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 7,
    "id": "56054be1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1762a03c790>]"
+       "[<matplotlib.lines.Line2D at 0x287d24ad300>]"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -215,21 +205,136 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fa3a0a35",
+   "metadata": {},
+   "source": [
+    "\\begin{equation}\n",
+    "\\chi^2(a_0, a_1, a_2) = \\sum_{i=1}^{n} (y_i - (a_0 + a_1 x_i + a_2 x_i^2))^2\n",
+    "\\end{equation}\n",
+    "\n",
+    "Expandiendo el término al cuadrado, tenemos:\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\chi^2(a_0, a_1, a_2) = \\sum_{i=1}^{n} (y_i^2 - 2y_i(a_0 + a_1 x_i + a_2 x_i^2) + (a_0 + a_1 x_i + a_2 x_i^2)^2)\n",
+    "\\end{equation}\n",
+    "\n",
+    "Desarrollando los términos al cuadrado, se obtiene:\n",
+    "\n",
+    "\\begin{align}\n",
+    "\\chi^2(a_0, a_1, a_2) &= \\sum_{i=1}^{n} (y_i^2 - 2a_0 y_i - 2a_1 x_i y_i - 2a_2 x_i^2 y_i \\nonumber \\\n",
+    "&+ a_0^2 + 2a_0 a_1 x_i + 2a_0 a_2 x_i^2 + a_1^2 x_i^2 + 2a_1 a_2 x_i^3 + a_2^2 x_i^4)\n",
+    "\\end{align}\n",
+    "\n",
+    "A continuación, tomamos las derivadas parciales de χ² con respecto a cada coeficiente y las igualamos a cero para minimizar la función de costo. Obtenemos:\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\frac{\\partial \\chi^2}{\\partial a_0} = -2 \\sum_{i=1}^{n} (y_i - a_0 - a_1 x_i - a_2 x_i^2) = 0\n",
+    "\\end{equation}\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\frac{\\partial \\chi^2}{\\partial a_1} = -2 \\sum_{i=1}^{n} (x_i y_i - a_0 x_i - a_1 x_i^2 - a_2 x_i^3) = 0\n",
+    "\\end{equation}\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\frac{\\partial \\chi^2}{\\partial a_2} = -2 \\sum_{i=1}^{n} (x_i^2 y_i - a_0 x_i^2 - a_1 x_i^3 - a_2 x_i^4) = 0\n",
+    "\\end{equation}\n",
+    "\n",
+    "Resolviendo este sistema de ecuaciones, obtenemos los valores de $a_0$, $a_1$ y $a_2$ que minimizan χ²."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b583e6e",
+   "metadata": {},
+   "source": [
+    "\\begin{align*}\n",
+    "\\mathbf{A} &=\n",
+    "\\begin{pmatrix}\n",
+    "n & \\sum_{i=1}^{n} x_i & \\sum_{i=1}^{n} x_i^2 \\\n",
+    "\\sum_{i=1}^{n} x_i & \\sum_{i=1}^{n} x_i^2 & \\sum_{i=1}^{n} x_i^3 \\\n",
+    "\\sum_{i=1}^{n} x_i^2 & \\sum_{i=1}^{n} x_i^3 & \\sum_{i=1}^{n} x_i^4\n",
+    "\\end{pmatrix} \\\n",
+    "\\mathbf{b} &=\n",
+    "\\begin{pmatrix}\n",
+    "\\sum_{i=1}^{n} y_i \\\n",
+    "\\sum_{i=1}^{n} x_i y_i \\\n",
+    "\\sum_{i=1}^{n} x_i^2 y_i\n",
+    "\\end{pmatrix}\n",
+    "\\end{align*}\n",
+    "\n",
+    "La solución analítica es:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "a_0 &= \\frac{\\begin{vmatrix}\n",
+    "\\sum_{i=1}^{n} y_i & \\sum_{i=1}^{n} x_i & \\sum_{i=1}^{n} x_i^2 \\\n",
+    "\\sum_{i=1}^{n} x_i y_i & \\sum_{i=1}^{n} x_i^2 & \\sum_{i=1}^{n} x_i^3 \\\n",
+    "\\sum_{i=1}^{n} x_i^2 y_i & \\sum_{i=1}^{n} x_i^3 & \\sum_{i=1}^{n} x_i^4\n",
+    "\\end{vmatrix}}{\\begin{vmatrix}\n",
+    "n & \\sum_{i=1}^{n} x_i & \\sum_{i=1}^{n} x_i^2 \\\n",
+    "\\sum_{i=1}^{n} x_i & \\sum_{i=1}^{n} x_i^2 & \\sum_{i=1}^{n} x_i^3 \\\n",
+    "\\sum_{i=1}^{n} x_i^2 & \\sum_{i=1}^{n} x_i^3 & \\sum_{i=1}^{n} x_i^4\n",
+    "\\end{vmatrix}} \\\n",
+    "\\end{align*}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40e2d71b",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "\\begin{aligned}\n",
+    "\\sum_{i=1}^n a_0 x_i^2 + \\sum_{i=1}^n a_1 x_i^3 + \\sum_{i=1}^n a_2 x_i^4 &= \\sum_{i=1}^n x_i^2 y_i \\\n",
+    "a_0 \\sum_{i=1}^n x_i^2 + a_1 \\sum_{i=1}^n x_i^3 + a_2 \\sum_{i=1}^n x_i^4 &= \\sum_{i=1}^n x_i^2 y_i \\\n",
+    "\\end{aligned}\n",
+    "\n",
+    "Usando las expresiones para las sumatorias que se obtuvieron previamente, podemos escribir:\n",
+    "\n",
+    "\\begin{aligned}\n",
+    "a_0 n + a_1 \\sum_{i=1}^n x_i + a_2 \\sum_{i=1}^n x_i^2 &= \\sum_{i=1}^n y_i \\\n",
+    "a_0 \\sum_{i=1}^n x_i + a_1 \\sum_{i=1}^n x_i^2 + a_2 \\sum_{i=1}^n x_i^3 &= \\sum_{i=1}^n x_i y_i \\\n",
+    "a_0 \\sum_{i=1}^n x_i^2 + a_1 \\sum_{i=1}^n x_i^3 + a_2 \\sum_{i=1}^n x_i^4 &= \\sum_{i=1}^n x_i^2 y_i \\\n",
+    "\\end{aligned}\n",
+    "\n",
+    "Este es un sistema de 3 ecuaciones lineales con 3 incógnitas (a_0, a_1 y a_2), que puede ser resuelto de varias maneras (por ejemplo, usando eliminación gaussiana o la regla de Cramer). Una solución analítica para este sistema es:\n",
+    "\n",
+    "\\begin{aligned}\n",
+    "a_0 &= \\frac{\\sum_{i=1}^n y_i x_i^2 \\sum_{i=1}^n x_i - \\sum_{i=1}^n x_i y_i \\sum_{i=1}^n x_i^2}{\\Delta} \\\n",
+    "a_1 &= \\frac{\\sum_{i=1}^n y_i \\sum_{i=1}^n x_i^3 \\sum_{i=1}^n x_i^2 - \\sum_{i=1}^n x_i y_i \\sum_{i=1}^n x_i^4 - \\sum_{i=1}^n x_i^2 y_i \\sum_{i=1}^n x_i^3}{\\Delta} \\\n",
+    "a_2 &= \\frac{\\sum_{i=1}^n y_i \\sum_{i=1}^n x_i^2 \\sum_{i=1}^n x_i^4 - \\sum_{i=1}^n x_i y_i \\sum_{i=1}^n x_i^5 - \\sum_{i=1}^n x_i^2 y_i \\sum_{i=1}^n x_i^4}{\\Delta} \\\n",
+    "\\end{aligned}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d0db2f9",
+   "metadata": {},
+   "source": [
+    "$\\Delta = n \\sum_{i=1}^n x_i^4 \\sum_{i=1}^n x_i^2 - \\left(\\sum_{i=1}^n x_i^3\\right)^2$\n",
+    "\n",
+    "De esta manera, los valores óptimos para $a_0$, $a_1$ y $a_2$ que minimizan $\\chi^2$ se calculan utilizando las siguientes expresiones:\n",
+    "\n",
+    "\\begin{aligned}\n",
+    "a_0 &= \\frac{\\sum_{i=1}^n y_i \\sum_{i=1}^n x_i^2 \\sum_{i=1}^n x_i - \\sum_{i=1}^n x_i \\sum_{i=1}^n x_i^2 \\sum_{i=1}^n x_i y_i}{\\Delta} \\\n",
+    "a_1 &= \\frac{n \\sum_{i=1}^n x_i \\sum_{i=1}^n x_i^2 y_i - \\sum_{i=1}^n x_i \\sum_{i=1}^n x_i^3 \\sum_{i=1}^n x_i y_i + \\sum_{i=1}^n x_i^2 \\sum_{i=1}^n x_i^3 \\sum_{i=1}^n x_i y_i}{\\Delta} \\\n",
+    "a_2 &= \\frac{n \\sum_{i=1}^n x_i^2 \\sum_{i=1}^n x_i^4 y_i - \\sum_{i=1}^n x_i \\sum_{i=1}^n x_i^4 \\sum_{i=1}^n x_i y_i + \\sum_{i=1}^n x_i^2 \\sum_{i=1}^n x_i^3 \\sum_{i=1}^n x_i^2 y_i}{\\Delta}\n",
+    "\\end{aligned}\n",
+    "\n",
+    "Donde $\\Delta$ se define como:\n",
+    "\\begin{aligned}\n",
+    "\\Delta = n \\sum_{i=1}^n x_i^4 \\sum_{i=1}^n x_i^2 - \\left(\\sum_{i=1}^n x_i^3\\right)^2\n",
+    "\\end{aligned}\n",
+    "Estas expresiones nos proporcionan los valores de $a_0$, $a_1$ y $a_2$ que minimizan la función $\\chi^2$."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 8,
    "id": "d5e06dcd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "  0% [                                                                                  ]   0 / 521\r",
-      "100% [..................................................................................] 521 / 521"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if not path.exists('Data'):\n",
     "    os.mkdir('Data')\n",
@@ -247,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 9,
    "id": "627188ae",
    "metadata": {},
    "outputs": [],
@@ -257,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 10,
    "id": "9989f4c1",
    "metadata": {},
    "outputs": [],
@@ -271,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 11,
    "id": "02fb40eb",
    "metadata": {},
    "outputs": [],
@@ -296,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 12,
    "id": "9a769aab",
    "metadata": {},
    "outputs": [],
@@ -331,28 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
-   "id": "bb9aa12b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "9999.999960000003"
-      ]
-     },
-     "execution_count": 125,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.sum(x_)**2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 14,
    "id": "199364fd",
    "metadata": {},
    "outputs": [],
@@ -367,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 15,
    "id": "eb8ee935",
    "metadata": {},
    "outputs": [
@@ -390,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 16,
    "id": "84c1c6a9",
    "metadata": {},
    "outputs": [],
@@ -401,17 +485,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 17,
    "id": "41ea4a44",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1762a9118d0>]"
+       "[<matplotlib.lines.Line2D at 0x287d25766e0>]"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -430,6 +514,14 @@
     "plt.scatter(x_,y_)\n",
     "plt.plot(X,Y, 'r')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "573b5273",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
